fix : gestion d'exception OSM